# cgcplib

./: .gitignore  CMakeLists.txt  CMakePresets.json  compile_commands.json  launch.json  run.bat
cmake/: cgcplib-config.cmake.in  silent_copy.cmake  utils.cmake
data/: conv_testmesh.mtl  cubetest.h5  cubetest.xmf  furniture_xena.mtl  i1p9zm7ssw00-mueble_salon.rar  testmesh.geo  testmesh.msh  testmesh.off  testmesh.vtk
data/off/: regions_polygon_mesh.off  regions_polygon_mesh_a1.off  regions_polygon_mesh_tube.off
examples/: CMakeLists.txt
examples/converter/: CMakeLists.txt  converter.cpp
include/SBREP/: CGALHelper.hpp  Core.hpp  SBREP_builder.hpp  SBREP_object.hpp  config.hpp
include/SBREP/IO/: OBJ.hpp  SBrep.hpp
include/cgcplib/: SBREPBuilder.hpp  SBREPObject.hpp  export.hpp
results/: Sphere.sbrep  cubeRemeshedInfluenseOnFaces.sbrep  cubeWithGroup.sbrep  debug.txt  frostcube.sbrep  test.sbrep  test2.sbrep  testmesh.sbrep  Труба большая.sbrep
src/: SBREPBuilder.cpp  SBREPObject.cpp  SBREP_builder.cpp  SBREP_object.cpp
tests/: CMakeLists.txt  IO_OBJ_tests.cpp  SBREP_builder_tests.cpp
tests/converter/: CMakeLists.txt  converter.cpp
